--- a/hugo.toml
+++ b/hugo.toml
@@ -7,6 +7,9 @@ title = 'はやてにっき'
 theme = 'ananke'
 copyright = 'NAKA-MURA Hayate'
 
+[markup.goldmark.renderer]
+unsafe = true
+
 [params]
 text_color = 'dark-gray'
 background_color_class = 'bg-navy'
